{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 104,
  "lineage": "332db7aa-1297-3915-617d-03633a6f74cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:security-group/sg-007dcd27ed4f06e68",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-007dcd27ed4f06e68",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2021110803260296210000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "947904738509",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-mount-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:security-group/sg-0a01ddf6d60794829",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a01ddf6d60794829",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-mount-sg20211110001423810300000001",
            "name_prefix": "efs-mount-sg",
            "owner_id": "947904738509",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:security-group/sg-053a18cf7b791aea6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-053a18cf7b791aea6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211108032602861600000009",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "947904738509",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:security-group/sg-027ccdccd77e38c6e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-027ccdccd77e38c6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20211108032602774200000008",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "947904738509",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:security-group/sg-003d1fd4acb0b1415",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003d1fd4acb0b1415",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6a6a5eb2e0185a1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "km-test-eks-HPe7y3Ss20211108032602489000000007",
            "name_prefix": "km-test-eks-HPe7y3Ss",
            "owner_id": "947904738509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "km-test-eks-HPe7y3Ss-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "km-test-eks-HPe7y3Ss-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:security-group/sg-0e6a6a5eb2e0185a1",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6a6a5eb2e0185a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0362fbca2a82e3fca",
                  "sg-06d030bf3cd3121cb",
                  "sg-0dac075a9178258b2"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003d1fd4acb0b1415"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003d1fd4acb0b1415"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "km-test-eks-HPe7y3Ss2021110803260313490000000b",
            "name_prefix": "km-test-eks-HPe7y3Ss",
            "owner_id": "947904738509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "km-test-eks-HPe7y3Ss-eks_worker_sg",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "km-test-eks-HPe7y3Ss-eks_worker_sg",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2162968733",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-003d1fd4acb0b1415",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix",
            "module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3534968769",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003d1fd4acb0b1415",
            "self": false,
            "source_security_group_id": "sg-0e6a6a5eb2e0185a1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2740397598",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6a6a5eb2e0185a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3843208974",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e6a6a5eb2e0185a1",
            "self": false,
            "source_security_group_id": "sg-003d1fd4acb0b1415",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-780526794",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e6a6a5eb2e0185a1",
            "self": false,
            "source_security_group_id": "sg-003d1fd4acb0b1415",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1529361343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6a6a5eb2e0185a1",
            "self": false,
            "source_security_group_id": "sg-0e6a6a5eb2e0185a1",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3072b68dc35cd0d",
            "association_id": "eipassoc-0b2ce8ef14c702e22",
            "domain": "vpc",
            "id": "eipalloc-0b3072b68dc35cd0d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-00788156bbbad4f4e",
            "private_dns": "ip-10-0-4-31.eu-west-2.compute.internal",
            "private_ip": "10.0.4.31",
            "public_dns": "ec2-18-169-59-209.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.59.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "km-test-vpc-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "tags_all": {
              "Name": "km-test-vpc-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:internet-gateway/igw-074603840a245780c",
            "id": "igw-074603840a245780c",
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "tags_all": {
              "Name": "km-test-vpc",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3072b68dc35cd0d",
            "connectivity_type": "public",
            "id": "nat-003dfcdeb2600e813",
            "network_interface_id": "eni-00788156bbbad4f4e",
            "private_ip": "10.0.4.31",
            "public_ip": "18.169.59.209",
            "subnet_id": "subnet-0ae34fac23f2fac05",
            "tags": {
              "Name": "km-test-vpc-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "tags_all": {
              "Name": "km-test-vpc-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d08c0972a299705b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-003dfcdeb2600e813",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d08c0972a299705b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-074603840a245780c",
            "id": "r-rtb-077c99327878cac931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077c99327878cac93",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:route-table/rtb-0d08c0972a299705b",
            "id": "rtb-0d08c0972a299705b",
            "owner_id": "947904738509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003dfcdeb2600e813",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "km-test-vpc-private",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "tags_all": {
              "Name": "km-test-vpc-private",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:route-table/rtb-077c99327878cac93",
            "id": "rtb-077c99327878cac93",
            "owner_id": "947904738509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074603840a245780c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "km-test-vpc-public",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "tags_all": {
              "Name": "km-test-vpc-public",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-037260433935d5e40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.suffix",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc5b5c3a9de7616",
            "route_table_id": "rtb-0d08c0972a299705b",
            "subnet_id": "subnet-0c389e5a2e12b841f"
          },
          "dependencies": [
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fc21710e7b2a915",
            "route_table_id": "rtb-0d08c0972a299705b",
            "subnet_id": "subnet-03e385dbb42e884de"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd87122bbc01a6d4",
            "route_table_id": "rtb-0d08c0972a299705b",
            "subnet_id": "subnet-0857124ce0687a764"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ea53113781fd1dd",
            "route_table_id": "rtb-077c99327878cac93",
            "subnet_id": "subnet-0ae34fac23f2fac05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024ca485f0a3a490e",
            "route_table_id": "rtb-077c99327878cac93",
            "subnet_id": "subnet-03ec9ec025c0082d2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035116cc01dbb9546",
            "route_table_id": "rtb-077c99327878cac93",
            "subnet_id": "subnet-0bb65c3d047d498ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:subnet/subnet-0c389e5a2e12b841f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c389e5a2e12b841f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "km-test-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:subnet/subnet-03e385dbb42e884de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03e385dbb42e884de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "km-test-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:subnet/subnet-0857124ce0687a764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0857124ce0687a764",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "km-test-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:subnet/subnet-0ae34fac23f2fac05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ae34fac23f2fac05",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "km-test-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:subnet/subnet-03ec9ec025c0082d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03ec9ec025c0082d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "km-test-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:subnet/subnet-0bb65c3d047d498ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0bb65c3d047d498ca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "km-test-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-037260433935d5e40"
          },
          "dependencies": [
            "random_string.suffix",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:947904738509:vpc/vpc-037260433935d5e40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08df2eb804ab2c27f",
            "default_route_table_id": "rtb-0e5d5f889055ce63f",
            "default_security_group_id": "sg-053a7d3b27fae6bbb",
            "dhcp_options_id": "dopt-e1e81189",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-037260433935d5e40",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5d5f889055ce63f",
            "owner_id": "947904738509",
            "tags": {
              "Name": "km-test-vpc",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            },
            "tags_all": {
              "Name": "km-test-vpc",
              "kubernetes.io/cluster/km-test-eks-HPe7y3Ss": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}